--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,254 @@
-.App {
-  text-align: center;
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    background-color: #e2eafc;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.head {
+    width: 100%;
+    height: 70px;
+    /* background-color: red; */
+    display: flex;
+    /* grid-template-columns: 25% 75%; */
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.head .logo{
+    width: 25%;
+    height: 70px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    background-color: black
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.head .logo img{
+    width: 170px;
+    height: 45px;
 }
 
-.App-link {
-  color: #61dafb;
+
+.head .navBody{
+    width: 75%;
+    height: 70px;
+    /* display: flex;
+    justify-content: right;
+    align-items: center; */
+    background-color: green;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.head .navBody ul{
+    background-color: green;
+    height: 70px;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    overflow: hidden;
+    /* background-color: white; */
 }
+
+
+.head .navBody ul li{
+    list-style-type: none;
+    /* position: relative;
+    width: 90px;
+    height: 70px; */
+}
+
+
+.head .navBody ul .navLink,
+.head .navBody ul .dropDownLink {
+    text-decoration: none;
+    color: red;
+}
+
+
+.head .navBody ul .navLink{
+    /* margin-top: 0px; */
+    padding: 25px 10px;
+    width: 100%;
+    height: 100%;
+    border: 1px solid red;
+    cursor: pointer;
+    /* position: absolute; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dropDown{
+    width: 250px;
+    display: none;
+    position: absolute;
+    top: 70px;
+    box-shadow: 2px 2px 1px 2px green;
+}
+
+.head .navBody ul li:hover .dropDown{
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    background-color: yellow;
+}
+
+.dropDown .dropDownLink{
+    width: 195px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+
+.manubar{
+    display: none;
+}
+
+
+
+
+
+
+/* end menubar */
+
+.banner img{
+    width: 100%;
+}
+
+
+/* end banner  */
+.miniImgSec {
+    display: grid;
+    grid-template-columns: repeat(4, 20%);
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.miniImgSec .ImgBody img{
+    width: 100%;
+}
+
+/* end mini Image section  */
+
+
+
+
+
+.welcomeSection, .aboutUsSection, .MissinIntegritySection{
+    margin-top: 20px;
+}
+  
+.sectionHeader{
+    display: flex;
+    /* justify-content: center;
+    align-items: center; */
+    flex-direction: column;
+    /* margin-top: ; */
+}
+  
+.sectionHeader .headerAnimation{
+    width: 130px;
+    height: 5px;
+    background-color: red;
+    border-radius: 5px;
+    position: relative;
+}
+  
+.sectionHeader .headerAnimation::before{
+    content: "";
+    width: 10px;
+    height: 10px;
+    background-color: green;
+    position: absolute;
+    top: 50%;
+    left: 0%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    animation-name: sectionHearer;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: cubic-bezier(0,0,1,1);
+}
+  
+@keyframes sectionHearer {
+    0%{
+      left: 0%;
+    }
+    100%{
+      left: 100%;
+    }
+}
+
+
+
+
+
+@media (max-width:768px) {
+    .manubar{
+        /* width: 100px; */
+        display: block;
+    }
+
+
+    .head {
+        width: 100%;
+        height: 70px;
+        /* background-color: red; */
+        display: flex;
+        /* grid-template-columns: 25% 75%; */
+        justify-content: space-between;
+        align-items: center;
+        /* padding: 0px 10px; */
+    }
+
+    
+    .navBody{
+        width: 200px !important;
+        height: 500px !important;
+        position: absolute;
+        top: 70px;
+        right: 0px;
+        /* display: flex;
+        justify-content: right;
+        align-items: center; */
+        background-color: red !important;
+    }
+    .head .navBody ul{
+        background-color: green;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 200px;
+        height: auto;
+        display: flex !important;
+        justify-content: left !important;
+        align-items: center !important;
+        flex-direction: column;
+        /* overflow: hidden; */
+        /* background-color: white; */
+    }
+
+
+    .head .navBody ul .navLink{
+        /* margin-top: 0px; */
+        padding: 7px 5px;
+        width: 200px;
+        height: 100%;
+        margin-left: -32px;
+        /* border: 1px solid red; */
+        /* cursor: pointer; */
+        /* position: absolute; */
+        display: flex;
+        justify-content: left;
+        align-items: center;
+    }
+
+}
+
+
