--- a/src/App.css
+++ b/src/App.css
@@ -42,11 +42,8 @@ body{
 
 
 
-.head #basic-navbar-nav{
-    width: 100%;
-    height: 100%;
-    /* background-color: red; */
-}
+
+
 /* .head .me-auto{ */
     /* width: 100%;
     height: 100%; */
@@ -59,11 +56,11 @@ body{
 .head .navBody{
     /* padding: 0px;
     margin: 0px; */
-    width: 100%;
+    width: 75%;
     height: 100%;
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     /* background-color: green; */
 
 }
@@ -76,6 +73,7 @@ body{
     justify-content: right;
     align-items: center;
     overflow: hidden;
+    padding-left: 0rem;
     /* background-color: white; */
 }
 
@@ -956,6 +954,80 @@ input[type=text], select {
 
 @media (max-width : 992px) {
 
+    .head .navBody{
+        /* padding: 0px;
+        margin: 0px; */
+        width: 200px;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        position: absolute;
+        top: 70px;
+        right: 0px;
+        background-color: green;
+    }
+
+
+    .head .navBody ul{
+        width: 100%;
+        height: 100%;
+        margin: 0px;
+        display: flex;
+        /* justify-content: right; */
+        /* align-items: center; */
+        flex-direction: column;
+        overflow: visible;
+        /* background-color: white; */
+    }
+
+    .head .navBody ul li{
+        list-style-type: none;
+        width: 100%;
+        background-color: #040404;
+        /* display: flex; */
+        /* justify-content: center; */
+        /* align-items: center; */
+        position: relative;
+        /* width: 90px;
+        height: 70px; */
+        /* position: relative; */
+    }
+
+    .head .navBody ul .navLink{
+        /* margin-top: 0px; */
+        display: block;
+        width: 100%;
+        padding: 15px 7px;
+        border: 2px solid red;
+        /* width: 100%;
+        height: 100%; */
+        /* border: 1px solid red; */
+        cursor: pointer;
+        /* position: absolute; */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: yellow;
+    }
+
+    .dropDown{
+        width: 250px;
+        /* height: ; */
+        display: none;
+        position: absolute;
+        top: 0px;
+        left: -250px;
+        /* box-shadow: 2px 2px 1px 2px #57606f; */
+        border: .5px solid #ced6e0;
+        /* overflow: hidden; */
+        border-top: .5px solid #f1f2f6;
+    }
+
+    .manubar{
+        display: block;
+    }
 
     .miniImgSec {
         display: grid;
