--- a/src/App.css
+++ b/src/App.css
@@ -957,16 +957,18 @@ input[type=text], select {
     .head .navBody{
         /* padding: 0px;
         margin: 0px; */
-        width: 200px;
+        width: 250px;
         height: auto;
-        display: flex;
+        /* display: none; */
+        /* display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: center; */
         flex-direction: column;
         position: absolute;
         top: 70px;
         right: 0px;
-        background-color: green;
+        /* background-color: green; */
+        background-color: #e2eafc;
     }
 
 
@@ -985,7 +987,7 @@ input[type=text], select {
     .head .navBody ul li{
         list-style-type: none;
         width: 100%;
-        background-color: #040404;
+        /* background-color: #040404; */
         /* display: flex; */
         /* justify-content: center; */
         /* align-items: center; */
@@ -1000,16 +1002,24 @@ input[type=text], select {
         display: block;
         width: 100%;
         padding: 15px 7px;
-        border: 2px solid red;
+        /* border: 2px solid red; */
         /* width: 100%;
         height: 100%; */
-        /* border: 1px solid red; */
+        border: .5px solid #f1f2f6;
         cursor: pointer;
         /* position: absolute; */
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: yellow;
+        /* background-color: yellow; */
+    }
+
+    .hideNav{
+        display: none;
+    }
+
+    .visibleNav{
+        display: block;
     }
 
     .dropDown{
@@ -1022,7 +1032,7 @@ input[type=text], select {
         /* box-shadow: 2px 2px 1px 2px #57606f; */
         border: .5px solid #ced6e0;
         /* overflow: hidden; */
-        border-top: .5px solid #f1f2f6;
+        border-top: 1px solid #f1f2f6;
     }
 
     .manubar{
@@ -1164,6 +1174,7 @@ input[type=text], select {
 @media (max-width : 576px) {
 
 
+
 .miniImgSec {
         display: grid;
         grid-template-columns: repeat(1, 60%);
@@ -1241,6 +1252,36 @@ input[type=text], select {
     }
 }
 
+@media (max-width:500px) {
+    .head .navBody{
+        /* padding: 0px;
+        margin: 0px; */
+        width: 150px;
+        /* height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        position: absolute;
+        top: 70px;
+        right: 0px;
+        background-color: green; */
+    }
+
+    .dropDown{
+        width: 170px;
+        /* height: ; */
+        display: none;
+        position: absolute;
+        top: 0px;
+        left: -170px;
+        /* box-shadow: 2px 2px 1px 2px #57606f; */
+        /* border: .5px solid #ced6e0; */
+        /* overflow: hidden; */
+        /* border-top: 1px solid #f1f2f6; */
+    }
+
+}
 
 
 @media (max-width:400px) {
