--- a/src/App.css
+++ b/src/App.css
@@ -809,7 +809,7 @@ input[type=text], select {
 
 .productDescriptionContainer{
     display: grid;
-    grid-template-columns: 15% 75%;
+    grid-template-columns: 15% 78%;
     justify-content: space-between;
     padding: 0px 10%;
     /* background-color: red; */
@@ -827,6 +827,7 @@ input[type=text], select {
 }
 
 .productDescriptionContainer .linkBody .link{
+    
     /* color: #040404;
     text-decoration: none;
     border-radius: 5px;
@@ -1267,6 +1268,14 @@ input[type=text], select {
 @media (max-width: 1400px) {
 
 
+    .productDescriptionContainer{
+        display: grid;
+        grid-template-columns: 15% 83%;
+        justify-content: space-between;
+        padding: 0px 10%;
+        /* background-color: red; */
+    }
+
 .productDescriptionContainer .linkBody .link span{
     padding: 7px 0px 7px 30px;
 }
@@ -1306,6 +1315,38 @@ input[type=text], select {
 
 /* Product description Container  */
 
+
+.productDescriptionContainer{
+    display: grid;
+    grid-template-columns: 15% 85%;
+    justify-content: space-between;
+    padding: 0px 10%;
+    /* background-color: red; */
+}
+
+.productDescriptionContainer .linkBody .link span{
+    padding: 7px 5px 7px 20px;
+}
+
+
+.productDescriptionContainer .detailsContainer .productImage{
+
+    width: 70%;
+    height: auto;
+    /* height: 450px; */
+    display: flex;
+    justify-content: center;
+    /* background-color: red; */
+    padding: 15px 0px;
+    border-radius: 5px;
+    box-shadow:  4px 4px 5px 0px #0001, 
+    5px 5px 15px 0px #0001,
+    6px 6px 15px 0px #0001,
+    -7px -7px 15px 0px #ffffff,
+    -4px -4px 5px 0px #ffffff;
+}
+
+
 .productDescriptionContainer .detailsContainer .productImage img{
     width: 80%;
     /* height: auto; */
@@ -1313,9 +1354,15 @@ input[type=text], select {
 }
 
 
-.productDescriptionContainer .linkBody .link span{
-    padding: 7px 0px 7px 20px;
+.productDescriptionContainer .detailsContainer .productSpecification{
+    width: 30%;
+    padding: 0px 0px 0px 40px;
+    text-align: justify;
+    line-height: normal;
 }
+
+
+
 /* Product description Container  */
 
 
@@ -1537,6 +1584,15 @@ input[type=text], select {
 }
 
 
+.productDescriptionContainer .detailsContainer{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0px 0px 0px 0px;
+    /* flex-direction: column; */
+}
+
 .productDescriptionContainer .detailsContainer .productSpecification{
     /* width: 50%; */
     padding: 0px 50px;
@@ -1546,7 +1602,7 @@ input[type=text], select {
 
 .productDescriptionContainer .detailsContainer .productImage{
 
-    width: 50%;
+    width: 58%;
     /* height: auto; */
     height: auto;
     /* display: flex;
@@ -1559,6 +1615,13 @@ input[type=text], select {
     width: 100%;
     /* height: auto; */
     height: auto;
+}
+
+.productDescriptionContainer .detailsContainer .productSpecification{
+    width: 35%;
+    padding: 0px 0px 0px 0px;
+    text-align: justify;
+    line-height: normal;
 }
 
 /* Product description Container  */
@@ -1617,11 +1680,7 @@ input[type=text], select {
 
 
 /* Product description Container  */
-.productDescriptionContainer .detailsContainer .productSpecification{
-    /* width: 50%; */
-    padding: 0px 30px;
-    /* text-align: justify; */
-}
+
 /* Product description Container  */
 
 
